Added missing icons

--- a/assets/stylesheets/blocs/_beer-specs-card.scss
+++ b/assets/stylesheets/blocs/_beer-specs-card.scss
@@ -10,10 +10,10 @@
     }
 
     &-card, &-recommend-card {
-        padding: 2rem;
+        padding: 1.5rem 2rem;
 
         @include tablet {
-            padding: 3rem;
+            padding: 2.5rem 3rem;
         }
 
         &:first-child {
