--- a/assets/stylesheets/atoms/_input.scss
+++ b/assets/stylesheets/atoms/_input.scss
@@ -34,6 +34,12 @@ label {
     }
 }
 
+textarea.field-input {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    height: auto;
+}
+
 .form-field {
     margin-bottom: 2rem;
 
@@ -50,6 +56,7 @@ label {
         .error-message {
             color: $red;
             display: block;
+            font-size: 1.2rem;
         }
     }
 
