--- a/assets/stylesheets/blocs/_payment-card.scss
+++ b/assets/stylesheets/blocs/_payment-card.scss
@@ -14,7 +14,7 @@
         background-color: $gray-5;
         min-height: 14rem;
         width: 100%;
-        margin-bottom: 2rem;
+        margin-bottom: .5rem;
         position: relative;
 
         .payment-details {
