--- a/assets/stylesheets/blocs/_cart-modal.scss
+++ b/assets/stylesheets/blocs/_cart-modal.scss
@@ -113,6 +113,7 @@
                 justify-content: space-between;
                 align-items: flex-end;
                 flex-direction: row;
+                min-height: 12rem;
             }
         }
     }
