Creating select beers page WIP

--- a/assets/stylesheets/pages/_new-pack.scss
+++ b/assets/stylesheets/pages/_new-pack.scss
@@ -1,5 +1,11 @@
+main {
+    &.pickpack-flow {
+        width: 200%;
+    }
+}
+
 .pickpack-section {
-    padding: 12rem 2rem 4rem 2rem;
+    padding: 14rem 2rem 10rem 2rem;
 
     @include tablet {
         padding: 12rem 8rem 12rem 8rem;
@@ -13,6 +19,11 @@
         padding: 15rem 18rem 10rem 18rem;
     }
 
+    &.page {
+        float: left;
+        width: 50%;
+    }
+
     &-title {
         text-align: center;
         margin-top: 2rem;
@@ -23,26 +34,20 @@
         }
     }
 
-    input {
-        cursor: pointer;
-        position: absolute;
-        opacity: 0;
-    }
-
     .pack-container {
         @include transition;
         cursor: pointer;
-        border: 1px solid $gray-5;
+        border: 1px solid $gray-4;
         border-radius: 1px;
         height: 13rem;
-        padding: 2.5rem 2rem 2.5rem 2rem;
+        padding: 1.5rem 1rem 1.5rem 1rem;
 
         &:hover {
-            border-color: $gray-4;
+            border-color: $gray-3;
         }
 
         @include tablet {
-            height: 25rem;
+            height: 20rem;
         }
 
         @include desktop {
@@ -50,7 +55,7 @@
             height: 100%;
             padding: 4.5rem 3.5rem 3rem 3.5rem;
 
-            &:hover .pack-content .pack-image{
+            &:hover .pack-content .pack-image {
                 transform: translateX(-50%) scale(1.08);
             }
         }
@@ -62,7 +67,7 @@
         &.selected {
             border-color: $gray-1;
 
-            .pack-content .pack-image{
+            .pack-content .pack-image {
                 @include desktop-down {
                     transform: scale(1.08);
                 }
@@ -81,7 +86,7 @@
             @include desktop {
                 justify-content: flex-end;
                 flex-direction: column;
-                text-align: center; 
+                text-align: center;
             }
 
             .pack-image {
@@ -89,7 +94,7 @@
 
                 @include desktop-down {
                     position: relative;
-                    width: auto;
+                    width: 45%;
                 }
 
                 @include desktop {
@@ -99,12 +104,21 @@
                 }
 
                 img {
-                    width: 100%;
                     object-fit: contain;
+                    height: 100%;
+                    width: 100%;
+                }
+            }
 
-                    @include desktop-down {
-                        height: 100%;
-                    }
+            .pack-info {
+                align-self: center;
+
+                @include desktop-down {
+                    padding-left: 1rem;
+                }
+
+                .pack-price {
+                    color: $gray-3;
                 }
             }
         }
@@ -127,5 +141,48 @@
             display: flex;
             justify-content: flex-end;
         }
+
+        &.second-step {
+            display: flex;
+            justify-content: space-between;
+        }
     }
 }
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    background-color: $white;
+    border: 1px solid $gray-4;
+
+    .grid-item {
+        background-color: $white;
+        border: 1px solid $gray-4;
+        padding: 2rem 3rem;
+        text-align: center;
+        min-height: 20rem;
+
+        .beer-list-title {
+            @include responsive_font($min: 1.4, $max: 1.8);
+            letter-spacing: 0.12em;
+        }
+
+        .beer-list-image {
+            margin-top: 4rem;
+            margin-bottom: 1rem;
+            height: 12rem;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+        }
+
+        .quantity-input {
+            margin-left: 50%;
+            transform: translateX(-50%);
+        }
+    }
+}
+
