--- a/assets/stylesheets/atoms/_button.scss
+++ b/assets/stylesheets/atoms/_button.scss
@@ -2,8 +2,8 @@
 	@include transition(all, 0.5);
 	border-radius: 1px;
 	min-width: 14rem;
-	height: 5rem;
-	padding: 1.4rem 1.8rem;
+	height: 4.4rem;
+	padding: 1.2rem 1.8rem;
 	text-transform: uppercase;
 	float: left;
 	text-align: center;
@@ -11,6 +11,8 @@
 
 	@include tablet {
 		min-width: 16rem;
+		height: 5rem;
+		padding: 1.4rem 1.8rem;
 	}
 
 	&.button-icon {
@@ -98,20 +100,23 @@
 }
 
 
+
 .back-link-container {
 	@include transition;
-	padding: 2.5rem 1.5rem;
+	padding: 9rem 2rem 2rem 2rem;
 	background-color: $white;
-	height: $navbar-height-sm;
 	position: fixed;
 	top: 0;
-	left: $navbar-height-sm*3;
+	left: 0;
 	z-index: 9;
+	width: 100%;
 
-	@include tablet{
+	@include tablet {
 		left: $navbar-height*3;
 		height: $navbar-height;
 		padding: 3.5rem 2.5rem;
+		width: max-content;
+
 	}
 
 	.back-link {
