--- a/assets/stylesheets/atoms/_input.scss
+++ b/assets/stylesheets/atoms/_input.scss
@@ -122,74 +122,63 @@ QUANTITY INPUT
     left: 0;
     bottom: 2rem;
     z-index: 4;
+}
 
-    .quantity-input {
-        position: relative;
+.quantity-input {
+    position: relative;
+    min-width: 12rem;
+    height: 4rem;
+    float: left;
+
+    @include resolution(1600px) {
         min-width: 14rem;
         height: 5rem;
+    }
+
+    input {
+        height: 100%;
+        width: 100%;
+        line-height: 1.65;
+        text-align: center;
         float: left;
+        display: block;
+        border: 1px solid $dark;
+        background-color: $white;
 
-        @include tablet {
-            min-width: 12rem;
+        &:focus {
+            outline: 0;
         }
+    }
 
-        @include resolution(1400px) {
-            min-width: 14rem;
-        }
+    .quantity-button {
+        cursor: pointer;
+        color: $dark;
+        position: absolute;
+        height: 100%;
+        width: 4rem;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -o-user-select: none;
+        user-select: none;
 
         @include resolution(1600px) {
-            min-width: 15rem;
-        }
-
-        input {
-            height: 100%;
-            width: 100%;
-            line-height: 1.65;
-            text-align: center;
-            float: left;
-            display: block;
-            border: 1px solid $dark;
-            background-color: $white;
-
-            &:focus {
-                outline: 0;
-            }
-        }
-
-        .quantity-button {
-            cursor: pointer;
-            color: $dark;
-            position: absolute;
-            height: 100%;
             width: 4.5rem;
-            display: flex;
-            justify-content: center;
-            text-align: center;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            -o-user-select: none;
-            user-select: none;
+        }
 
-            @include tablet {
-                width: 4rem;
-            }
+        &.quantity-up {
+            top: 0;
+            right: 0;
+            border-left: 1px solid $dark;
+        }
 
-            @include resolution(1400px) {
-                width: 4.5rem;
-            }
-
-            &.quantity-up {
-                top: 0;
-                right: 0;
-                border-left: 1px solid $dark;
-            }
-
-            &.quantity-down {
-                top: 0;
-                left: 0;
-                border-right: 1px solid $dark;
-            }
+        &.quantity-down {
+            top: 0;
+            left: 0;
+            border-right: 1px solid $dark;
         }
     }
 }
