--- a/assets/stylesheets/atoms/_button.scss
+++ b/assets/stylesheets/atoms/_button.scss
@@ -2,12 +2,12 @@
 	@include transition(all, 0.5);
 	border-radius: 1px;
 	min-width: 14rem;
-	height: 4.4rem;
 	padding: 1.2rem 1.8rem;
 	text-transform: uppercase;
 	float: left;
 	text-align: center;
 	position: relative;
+	vertical-align: middle;
 
 	@include tablet {
 		min-width: 16rem;
@@ -16,38 +16,17 @@
 	}
 
 	&.button-icon {
-		padding-left: 15%;
-		padding-right: 10%;
-
-		@include hd {
-			padding-left: 20%;
-		}
-
-		@include resolution(1400px) {
-			padding-left: 15%;
-		}
+		display: flex;
+		justify-content: center;
+		align-items: center;
 
 		img {
 			max-width: 100%;
 			max-height: 100%;
 
 			&.icon {
-				position: absolute;
-				top: 50%;
-				left: 10%;
-				transform: translate(0, -50%);
-
-				@include desktop {
-					left: 10%;
-				}
-
-				@include hd {
-					left: 15%;
-				}
-
-				@include resolution(1600px) {
-					left: 20%;
-				}
+				position: relative;
+				margin-right: 1.2rem;
 			}
 		}
 	}
@@ -116,15 +95,18 @@
 		height: $navbar-height;
 		padding: 3.5rem 2.5rem;
 		width: max-content;
+	}
+}
 
+.back-link {
+	color: $dark;
+	text-transform: uppercase;
+
+	&:active {
+		color: $dark;
 	}
 
-	.back-link {
-		color: $dark;
-		text-transform: uppercase;
-
-		&-arrow {
-			margin-right: 1rem;
-		}
+	&-arrow {
+		margin-right: 1rem;
 	}
 }
