--- a/assets/stylesheets/pages/_new-pack.scss
+++ b/assets/stylesheets/pages/_new-pack.scss
@@ -11,10 +11,6 @@ main {
         padding: 12rem 8rem 12rem 8rem;
     }
 
-    @include desktop {
-        padding: 15rem 8rem 10rem 8rem;
-    }
-
     @include resolution(1600px) {
         padding: 15rem 18rem 10rem 18rem;
     }
@@ -27,10 +23,10 @@ main {
     &-title {
         text-align: center;
         margin-top: 2rem;
-        margin-bottom: 4rem;
+        margin-bottom: 3rem;
 
         @include tablet {
-            margin-bottom: 6rem;
+            margin-bottom: 4rem;
         }
     }
 
@@ -130,7 +126,7 @@ main {
         padding: 2rem 2rem 2rem 2rem;
 
         @include tablet {
-            padding: 3rem 8rem 3rem 8rem;
+            padding: 2rem 8rem 2rem 8rem;
         }
 
         @include resolution(1600px) {
@@ -140,48 +136,128 @@ main {
         &.first-step {
             display: flex;
             justify-content: flex-end;
+            z-index: 2;
         }
 
         &.second-step {
-            display: flex;
+            display: none;
             justify-content: space-between;
+            align-items: center;
+            z-index: 3;
+
+            .button {
+                span {
+                    display: none;
+
+                    @include phablet {
+                        display: inline;
+                    }
+                }
+            }
         }
     }
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto auto auto;
-    background-color: $white;
-    border: 1px solid $gray-4;
+.pickpack-section {
+    .grid-container {
+        display: grid;
+        margin-bottom: 3rem;
 
-    .grid-item {
-        background-color: $white;
-        border: 1px solid $gray-4;
-        padding: 2rem 3rem;
-        text-align: center;
-        min-height: 20rem;
-
-        .beer-list-title {
-            @include responsive_font($min: 1.4, $max: 1.8);
-            letter-spacing: 0.12em;
+        @include desktop-down {
+            grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
         }
 
-        .beer-list-image {
-            margin-top: 4rem;
-            margin-bottom: 1rem;
-            height: 12rem;
+        @include desktop {
+            grid-template-columns: auto auto auto auto;
+        }
 
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: contain;
+        @include hd {
+            grid-template-columns: auto auto auto auto auto;
+        }
+
+        .grid-item {
+            background-color: $white;
+            border: 1px solid $gray-4;
+            padding: 1.5rem 2rem;
+            text-align: center;
+            min-height: 20rem;
+
+            @include tablet {
+                padding: 2rem 3rem;
+            }
+
+            .beer-list-title {
+                @include responsive_font($min: 1.4, $max: 1.8);
+                letter-spacing: 0.12em;
+            }
+
+            .beer-list-price {
+                font-size: 1.2rem;
+                font-weight: bold;
+                color: $gold;
+            }
+
+            .beer-list-image {
+                margin-top: 1.5rem;
+                margin-bottom: 1rem;
+                height: 12rem;
+
+                @include tablet {
+                    margin-top: 2.5rem;
+                }
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+                }
+            }
+
+            .quantity-input {
+                margin-left: 50%;
+                transform: translateX(-50%);
+            }
+        }
+    }
+
+
+    .resume-card {
+        .checkout-card-body {
+            min-height: 30rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            .total-beers {
+                margin-bottom: 4rem;
+
+                small {
+                    margin-bottom: .8rem;
+                }
+
+                .total-quantity {
+                    margin-top: 1rem;
+
+                    p {
+                        font-family: $pangram-medium;
+                    }
+                }
+
+                .pack-error {
+                    color: $red;
+                }
             }
         }
 
-        .quantity-input {
-            margin-left: 50%;
-            transform: translateX(-50%);
+        .empty-pack {
+            background-color: $gray-5;
+            padding: 3rem;
+            margin-bottom: 4rem;
+
+            .empty-info {
+                text-align: center;
+                color: $gray-2;
+            }
         }
     }
 }
