--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -11,31 +11,32 @@
 'atoms/base',
 'atoms/button',
 'atoms/button_safari',
-'atoms/scrollbar',
 'atoms/input',
-'atoms/radio',
 'atoms/checkbox',
+'atoms/radio',
 'atoms/select',
+'atoms/scrollbar',
 
 'blocs/main',
 'blocs/navbar',
 'blocs/footer',
-'blocs/news',
-'blocs/media',
-'blocs/recommended',
-'blocs/next-page',
+'blocs/accordion',
 'blocs/beer-specs-card',
-'blocs/tabs',
-'blocs/db-title',
-'blocs/swiper-slide',
-'blocs/gallery',
 'blocs/cart-modal',
 'blocs/cart-item',
 'blocs/checkout-total',
-'blocs/payment-card',
-'blocs/loading',
 'blocs/cookie-modal',
+'blocs/db-title',
+'blocs/gallery',
+'blocs/loading',
 'blocs/loader',
+'blocs/media',
+'blocs/next-page',
+'blocs/news',
+'blocs/payment-card',
+'blocs/recommended',
+'blocs/swiper-slide',
+'blocs/tabs',
 
 
 'pages/beers',
