Add allergens improvements

--- a/assets/stylesheets/atoms/_button.scss
+++ b/assets/stylesheets/atoms/_button.scss
@@ -110,3 +110,12 @@
 		margin-right: 1rem;
 	}
 }
+
+.inline-link {
+	font-size: inherit;
+	font-family: inherit;
+	letter-spacing: inherit;
+	font-weight: inherit;
+	text-decoration: underline;
+	color: inherit;
+}
