--- a/assets/stylesheets/pages/_single-beer.scss
+++ b/assets/stylesheets/pages/_single-beer.scss
@@ -74,6 +74,10 @@
 
         &-ingredients {
             padding-top: 4rem;
+        }
+
+        &-allergenic {
+            display: block;
             padding-bottom: 2rem;
         }
 
