Contact page finished

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -38,7 +38,6 @@
 'blocs/swiper-slide',
 'blocs/tabs',
 
-
 'pages/beers',
 'pages/single-beer',
 'pages/brewery',
@@ -51,6 +50,7 @@
 'pages/news-page',
 'pages/politics',
 'pages/new-pack',
+'pages/contacts',
 
 'resources/helpers';
 
